roles/firewall/files/rules.v4/127.0.0.1/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sun Dec  8 20:40:21 2019
*mangle
:PREROUTING ACCEPT [5563:2098969]
:INPUT ACCEPT [5563:2098969]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5518:1328080]
:POSTROUTING ACCEPT [5518:1328080]
COMMIT
# Completed on Sun Dec  8 20:40:21 2019
# Generated by iptables-save v1.6.0 on Sun Dec  8 20:40:21 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32:5072]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p udp -m udp --dport 111 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 40001 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 40002 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 40003 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 40254 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m limit --limit 2/sec --limit-burst 20 -j LOG --log-prefix "IPTABLES:INPUT_REJECT: " --log-level 6
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.40.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.40.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.40.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5555 -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5001 -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5555 -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5001 -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5555 -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5001 -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5555 -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.40.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -p udp -m udp --dport 5001 -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.40.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -p udp -m iprange --src-range 10.40.0.1-10.40.0.255 --dst-range 10.42.0.1-10.42.0.5 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5555 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -s 10.38.1.1/32 -p tcp -m tcp --dport 5001 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --dst-range 10.40.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.39.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.39.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.39.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.39.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -m iprange --src-range 10.42.1.1-10.42.1.5 --dst-range 10.38.1.1-10.40.1.255 -j ACCEPT
-A FORWARD -m iprange --src-range 10.42.2.1-10.42.2.5 --dst-range 10.38.2.1-10.40.2.255 -j ACCEPT
-A FORWARD -m iprange --src-range 10.42.3.1-10.42.3.5 --dst-range 10.38.3.1-10.40.3.255 -j ACCEPT
-A FORWARD -m iprange --src-range 10.42.254.1-10.42.254.5 --dst-range 10.38.254.1-10.40.254.255 -j ACCEPT
-A FORWARD -m limit --limit 2/sec --limit-burst 20 -j LOG --log-prefix "IPTABLES:FORWARD_REJECT: " --log-level 6
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sun Dec  8 20:40:21 2019
# Generated by iptables-save v1.6.0 on Sun Dec  8 20:40:21 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o teambr1 -j MASQUERADE
-A POSTROUTING -o teambr2 -j MASQUERADE
-A POSTROUTING -o teambr3 -j MASQUERADE
COMMIT
# Completed on Sun Dec  8 20:40:21 2019
